<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiMe</string>
    <string name="action_settings">Network Settings</string>
    <string name="wifi_p2p_disabled">Enable Wifi to discover p2p connections</string>
    <string name="username_title">username</string>
    <string name="settings_label">Network Settings</string>
    <string name="exit_label">Exit</string>
    <string name="discover_label">Search Peers</string>
    <string name="action_discover">Search Peers</string>
    <string name="p2p_off_warning">Discover unavailable. Please enable Wifi P2P connections</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Send File</string>
    <string name="group_owner_text">Group owner:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">client</string>
    <string name="empty"></string>
    <string name="empty_message"></string>
    <string name="external_storage">Check the external storage status</string>
    <string name="send_file_button">Receive File</string>
    <string name="chat_button">Chat</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="send">Send</string>
    <string name="title_activity_chat_activity1">ChatActivity1</string>
    <string name="register">Enable Chat</string>
    <string name="discover">Search Users</string>
    <string name="connect">Establish Connection</string>
    <string name="start">Start Chat Connection</string>
    <string name="author">by Andrea Sancho</string>
    <string name="title_activity_splash">Splash</string>

</resources>