<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/advertise_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickAdvertise"
            android:text="@string/register"
            android:layout_weight="0.33"
            style="@style/button_text_2"
            android:background="@drawable/styled_button_2"/>
        <Button
            android:id="@+id/discover_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickDiscover"
            android:text="@string/discover"
            android:layout_weight="0.33"
            style="@style/button_text_2"
            android:background="@drawable/styled_button_2"/>
        <Button
            android:id="@+id/connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickConnect"
            android:text="@string/connect"
            android:layout_weight="0.34"
            style="@style/button_text_2"
            android:background="@drawable/styled_button_2"/>
    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusable="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation= "vertical"
        android:layout_weight="0"
        android:gravity="bottom">

        <EditText
            android:id="@+id/chatInput"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="4"
            android:inputType="text"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/send_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/send_btn"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="96dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:onClick="clickSend"
            android:text="@string/send"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            style="@style/button_text_2"
            android:background="@drawable/styled_button_2"/>


    </RelativeLayout>


</LinearLayout>