<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="2"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/image_menu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/WifiMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/button_menu1"
                android:textSize="40sp"
                android:textStyle="italic"
                android:layout_margin="10dip"
                android:layout_below="@+id/image_menu"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Username"
                android:textColor="@color/username_menu"
                android:ems="10"
                android:layout_below="@+id/WifiMe"
                android:layout_alignLeft="@+id/WifiMe"
                android:layout_alignStart="@+id/WifiMe"
                android:layout_alignRight="@+id/WifiMe"
                android:layout_alignEnd="@+id/WifiMe" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_weight="2"
            android:layout_gravity="center">
            <Button
                android:id="@+id/discover_button"
                android:layout_gravity="bottom"
                style="@style/button_text"
                android:background="@drawable/styled_button"
                android:text="@string/discover_label" />

            <Button
                android:id="@+id/settings_button"
                android:layout_gravity="bottom"
                style="@style/button_text"
                android:background="@drawable/styled_button"
                android:text="@string/settings_label"
                android:layout_below="@+id/discover_button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:id="@+id/exit_button"
                android:layout_gravity="bottom"
                style="@style/button_text"
                android:background="@drawable/styled_button"
                android:text="@string/exit_label"
                android:layout_below="@+id/settings_button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>

